feat: category matching without canonical dictionary or Other sentinel